tinyc/test/good/enum-list-no-comma.c
int main()
{
    enum {
        x,
        y
    };

    return 0;
}
