tinyc/test/bad/assert-override.c
int assert( int x );
int main()
{
    return 0;
}
